Bug: zoomed on mobile safari
Fix for zooming in on input in mobile safari.
Changed input font size to 16px

--- a/app/css/main.css
+++ b/app/css/main.css
@@ -16,6 +16,10 @@ a:hover {
     cursor: pointer;
 }
 
+.form-control {
+    font-size: 16px;
+}
+
 .fade-in {
     opacity: 0;
     -webkit-animation: fade-in 0.5s;
